--- a/lib/tasks/volte/liquid_views/home--index.liquid
+++ b/lib/tasks/volte/liquid_views/home--index.liquid
@@ -19,10 +19,10 @@ partial: false
       <form class="home_search search-form" action="/search" method="get">
         <input id="filter" name="filter" type="hidden" />
         <ul class="search-filters">
-          <li data-filter="Dresses">
+          <li data-filter="Dress">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-9.021 -11.284 101 126.097"><g stroke-miterlimit="10"><path d="M42.009 106.085c-18.472 0-35.347-3.759-45.141-10.059a1.432 1.432 0 0 1 1.548-2.409c9.21 5.922 25.913 9.604 43.592 9.604 17.57 0 33.689-3.479 43.118-9.304a1.433 1.433 0 0 1 1.969.465 1.43 1.43 0 0 1-.466 1.971c-9.858 6.092-26.54 9.732-44.62 9.732z"/><path d="M41.773 114.312c-21.336 0-40.824-3.762-49.649-9.583a1.43 1.43 0 0 1-.546-1.715l.104-.273.049-.11 34.977-71.463-3.977-25.457a1.435 1.435 0 0 1 .475-1.304c.146-.127 3.66-3.149 8.159-3.149 2.548 0 6.098 1.005 9.232 5.493 3.135-4.487 6.685-5.493 9.233-5.493 4.5 0 8.013 3.021 8.161 3.149.352.309.532.77.481 1.235L55.73 31.131l35.495 71.493c.065.126.107.264.13.404l.104.643a1.432 1.432 0 0 1-.662 1.454c-9.2 5.668-27.986 9.187-49.024 9.187zm-47.021-11.329c8.842 5.162 27.034 8.459 47.021 8.459 19.502 0 37.545-3.197 46.556-8.198L52.974 32.031a1.42 1.42 0 0 1-.143-.792l2.703-25.101c-.998-.701-3.199-2.009-5.703-2.009-3.043 0-5.685 1.958-7.852 5.822a1.439 1.439 0 0 1-1.252.734h-.259c-.52 0-.998-.281-1.251-.734-2.167-3.863-4.809-5.821-7.852-5.821-2.472 0-4.649 1.276-5.667 1.984l3.913 25.058c.045.29 0 .587-.129.851l-34.73 70.96z"/><path d="M29.969 3.473a1.436 1.436 0 0 1-1.435-1.436V-9.35a1.435 1.435 0 0 1 2.87 0V2.038a1.433 1.433 0 0 1-1.435 1.435zM51.1 3.473a1.437 1.437 0 0 1-1.435-1.436V-9.35a1.435 1.435 0 0 1 2.87 0V2.038A1.435 1.435 0 0 1 51.1 3.473zM41.506 35.333c-6.967 0-12.635-2.464-13.006-2.629a1.437 1.437 0 0 1-.727-1.896 1.432 1.432 0 0 1 1.894-.728c.129.056 13.097 5.669 23.064-.659a1.436 1.436 0 0 1 1.538 2.423c-4.164 2.646-8.687 3.489-12.763 3.489z"/><path d="M47.557 82.68a1.436 1.436 0 0 1-1.423-1.26l-5.821-47.194a1.436 1.436 0 0 1 1.248-1.602 1.444 1.444 0 0 1 1.602 1.25l5.82 47.194a1.435 1.435 0 0 1-1.426 1.612z"/><path d="M35.791 59.652a1.435 1.435 0 0 1-1.399-1.762l5.694-24.294a1.437 1.437 0 0 1 2.796.654l-5.695 24.295a1.436 1.436 0 0 1-1.396 1.107z"/></g></svg>
           </li>
-          <li data-filter="Bags">
+          <li data-filter="Bag">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72.74 69.855"><path fill-rule="evenodd" clip-rule="evenodd" stroke-width=".5" d="M28.285 34.284H45.872V46.523H26.867V34.284h1.418zm-3.778 22.181l2.828 10.556H45.404l2.829-10.556 2.734.73-2.633 9.825h3.069c7.842-.115 10.293-5.403 11.762-12.229l6.068-28.146H3.506l6.068 28.146c1.496 6.957 3.867 11.997 11.762 12.229h3.068l-2.631-9.825 2.734-.73zm11.863 13.39h15.034c9.33-.194 12.749-6.2 14.53-14.477l6.437-29.858.369-1.711H57.969C55.31 14.195 51.169 7.5 46.435 3.725 43.333 1.25 39.964.01 36.564 0c-3.391-.011-6.771 1.209-9.905 3.655-4.829 3.768-9.092 10.497-11.877 20.155H0l.368 1.711 6.438 29.858c1.733 8.062 5.309 14.477 14.53 14.477H36.37zM17.727 23.81c2.603-8.628 6.411-14.604 10.671-17.928 2.622-2.046 5.408-3.067 8.167-3.058 2.749.009 5.516 1.046 8.11 3.115 4.174 3.329 7.87 9.278 10.357 17.871H17.727zm25.311 13.307H29.702v6.57h13.336v-6.57z"/></svg>
           </li>
           <li data-filter="Millinery">
@@ -42,10 +42,10 @@ partial: false
               <li data-filter="Any">
                 Any
               </li>
-              <li data-filter="Dresses">
+              <li data-filter="Dress">
                 Dresses
               </li>
-              <li data-filter="Bags">
+              <li data-filter="Bag">
                 Bags
               </li>
               <li data-filter="Millinery">
@@ -59,6 +59,8 @@ partial: false
               </li>
             </ul>
           </div>
+          <input type="hidden" name="sort" value="name_asc"/>
+          <input type="hidden" name="lg_custom_attributes[item_type][]" value=""/>
           <input class="search-input" name="query" placeholder="Search" type="text" /><button><i class="volte-icon-search"></i></button>
         </div>
       </form>
