--- a/lib/tasks/volte/liquid_views/listings--show.liquid
+++ b/lib/tasks/volte/liquid_views/listings--show.liquid
@@ -10,7 +10,7 @@
 
       <div class="flex-container">
         <div class="user-bar__name">
-          <a href="{{ listing.creator.user_profile_url }}">{% if listing.creator.properties.use_alias_as_name %}{{ listing.creator.user_alias }}{% else %}{{ listing.creator.name }}{% endif %}</a>
+          <a href="{{ listing.creator.user_profile_url }}">{% if listing.creator.properties.use_alias_as_name == '1' %}{{ listing.creator.properties.user_alias }}{% else %}{{ listing.creator.name }}{% endif %}</a>
         </div>
         <div class="user-bar__action-bar">
           <ul>
