--- a/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
+++ b/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
@@ -83,14 +83,16 @@
           {{ listing.properties.case_full_description | nl2br }}
         </div>
 
+        {% if listing.attachments.size > 0 %}
         <div class="listing-section documents">
           <h2>Case Documents</h2>
           <ul>
-            <li><a href="./" download>Client Written Engagement</a></li>
-            <li><a href="./" download>Accident Report</a></li>
-            <li><a href="./" download>Certificate</a></li>
+            {% for attachment in listing.attachments %}
+            <li><a href="{{ attachment.attachment_url }}" download>{{ attachment.title }}</a></li>
+            {% endfor %}
           </ul>
         </div>
+        {% endif %}
 
         <div class="listing-section offers-made">
           <h2>Offers Made</h2>
