--- a/lib/tasks/volte/liquid_views/dashboard--company--reservations--reservation.liquid
+++ b/lib/tasks/volte/liquid_views/dashboard--company--reservations--reservation.liquid
@@ -46,22 +46,22 @@
       <dd>{{ reservation.transactable.location.address }}</dd>
 
       <dt>Shipping Package:</dt>
-      <dd>National - Briefcase (20L - 5kg)</dd>
+      <dd>-----</dd>
 
       <dt>Borrower ship to address:</dt>
-      <dd>12345 Street Name, St. Louis MO, 63366</dd>
+      <dd>------</dd>
 
       {% assign requested_dates = reservation.long_dates %}
       {% assign requested_dates_size = requested_dates.size %}
 
       <dt>Period:</dt>
-      <dd>{{ requested_dates_size }} days</dd>
+      <dd>{{ reservation.transactable_pricing.number_of_units }} days</dd>
 
       <dt>Rental date:</dt>
-      <dd>{{ requested_dates }}</dd>
+      <dd>{{ reservation.start_date | to_date | l: 'short' }}</dd>
 
       <dt>Return date:</dt>
-      <dd>{{ requested_dates }}</dd>
+      <dd>{{ reservation.start_date | to_date | add_to_date: reservation.transactable_pricing.number_of_units | l: 'short'  }} </dd>
     </dl>
   </div>
 </div>
@@ -96,16 +96,16 @@
     <h3>Total Costs</h3>
     <table class="col-xs-12">
       <tr>
-        <td>Item Rental ({{ requested_dates_size }} days)</td>
-        <td>$1000</td>
+        <td>Item Rental ({{ reservation.transactable_pricing.number_of_units }} days)</td>
+        <td>{{ reservation.transactable_pricing.price | price_with_cents_with_currency }}</td>
       </tr>
       <tr>
         <td>Shipping</td>
-        <td>$30.00</td>
+        <td>---</td>
       </tr>
       <tr>
         <td></td>
-        <td class="item-reservation__costs-total">$1030.00</td>
+        <td class="item-reservation__costs-total">{{ reservation.total_payable_to_host_formatted }}</td>
       </tr>
     </table>
   </div>
