--- a/lib/tasks/volte/pages/lend.liquid
+++ b/lib/tasks/volte/pages/lend.liquid
@@ -1,6 +1,7 @@
 ---
 name: Lend
 ---
+
 <div class="wrapper-a">
   <main>
     <header class="section-header">
@@ -12,10 +13,8 @@ name: Lend
     <div class="boxes boxes-vertical">
       <div class="box">
         <div class="box-left">
-          <h3>
-            List it:
-          </h3>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-9.021 -11.284 101 126.097"><g stroke-miterlimit="10"><path d="M42.009 106.085c-18.472 0-35.347-3.759-45.141-10.059a1.432 1.432 0 0 1 1.548-2.409c9.21 5.922 25.913 9.604 43.592 9.604 17.57 0 33.689-3.479 43.118-9.304a1.433 1.433 0 0 1 1.969.465 1.43 1.43 0 0 1-.466 1.971c-9.858 6.092-26.54 9.732-44.62 9.732z"/><path d="M41.773 114.312c-21.336 0-40.824-3.762-49.649-9.583a1.43 1.43 0 0 1-.546-1.715l.104-.273.049-.11 34.977-71.463-3.977-25.457a1.435 1.435 0 0 1 .475-1.304c.146-.127 3.66-3.149 8.159-3.149 2.548 0 6.098 1.005 9.232 5.493 3.135-4.487 6.685-5.493 9.233-5.493 4.5 0 8.013 3.021 8.161 3.149.352.309.532.77.481 1.235L55.73 31.131l35.495 71.493c.065.126.107.264.13.404l.104.643a1.432 1.432 0 0 1-.662 1.454c-9.2 5.668-27.986 9.187-49.024 9.187zm-47.021-11.329c8.842 5.162 27.034 8.459 47.021 8.459 19.502 0 37.545-3.197 46.556-8.198L52.974 32.031a1.42 1.42 0 0 1-.143-.792l2.703-25.101c-.998-.701-3.199-2.009-5.703-2.009-3.043 0-5.685 1.958-7.852 5.822a1.439 1.439 0 0 1-1.252.734h-.259c-.52 0-.998-.281-1.251-.734-2.167-3.863-4.809-5.821-7.852-5.821-2.472 0-4.649 1.276-5.667 1.984l3.913 25.058c.045.29 0 .587-.129.851l-34.73 70.96z"/><path d="M29.969 3.473a1.436 1.436 0 0 1-1.435-1.436V-9.35a1.435 1.435 0 0 1 2.87 0V2.038a1.433 1.433 0 0 1-1.435 1.435zM51.1 3.473a1.437 1.437 0 0 1-1.435-1.436V-9.35a1.435 1.435 0 0 1 2.87 0V2.038A1.435 1.435 0 0 1 51.1 3.473zM41.506 35.333c-6.967 0-12.635-2.464-13.006-2.629a1.437 1.437 0 0 1-.727-1.896 1.432 1.432 0 0 1 1.894-.728c.129.056 13.097 5.669 23.064-.659a1.436 1.436 0 0 1 1.538 2.423c-4.164 2.646-8.687 3.489-12.763 3.489z"/><path d="M47.557 82.68a1.436 1.436 0 0 1-1.423-1.26l-5.821-47.194a1.436 1.436 0 0 1 1.248-1.602 1.444 1.444 0 0 1 1.602 1.25l5.82 47.194a1.435 1.435 0 0 1-1.426 1.612z"/><path d="M35.791 59.652a1.435 1.435 0 0 1-1.399-1.762l5.694-24.294a1.437 1.437 0 0 1 2.796.654l-5.695 24.295a1.436 1.436 0 0 1-1.396 1.107z"/></g></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M0 6.6v18.9c0 2.8 2.3 5.1 5.1 5.1h21.7c2.8 0 5.1-2.3 5.1-5.1V6.6c0-2.8-2.3-5.1-5.1-5.1H5.1C2.3 1.4 0 3.7 0 6.6zm5.1-4.2h21.7c2.3 0 4.1 1.8 4.1 4.1v18.9c0 2.3-1.8 4.1-4.1 4.1H5.1c-2.3 0-4.1-1.8-4.1-4.1V6.6c0-2.3 1.9-4.2 4.1-4.2z"/><path d="M27.1 8.1c.9 0 1.6-.6 1.7-1.5v-.3c-.1-.9-.8-1.6-1.7-1.6-.9 0-1.7.7-1.7 1.6v.3c0 .9.8 1.5 1.7 1.5zm-.8-1.8c0-.4.3-.7.7-.7.4 0 .7.3.7.7v.1c-.1.3-.3.6-.7.6-.4 0-.7-.3-.7-.6v-.1c0 .1 0 0 0 0zm-3.6 1.8c.9 0 1.6-.7 1.7-1.6v-.3c-.1-.9-.8-1.6-1.7-1.6-.9 0-1.6.7-1.7 1.6v.4c0 .9.8 1.5 1.7 1.5zM22 6.3c0-.4.3-.7.7-.7.4 0 .7.3.7.7v.2c0 .4-.3.6-.7.6-.4 0-.7-.3-.7-.6v-.2c0 .1 0 0 0 0zm-3.7 1.8c.9 0 1.6-.7 1.7-1.6v-.3c-.1-.9-.8-1.6-1.7-1.6-.9 0-1.7.7-1.7 1.6v.3c.1 1 .8 1.6 1.7 1.6zm-.7-1.8c0-.4.3-.7.7-.7.4.1.7.4.7.7v.2c0 .4-.3.6-.7.6-.4 0-.7-.3-.7-.6v-.2c0 .1 0 0 0 0zM14 11.6H4.4v7.1H14v-7.1zm-1.1 6.1H5.4v-5.1h7.5v5.1zm-8.2 6h23.1v1H4.7zm0-3h23.1v1H4.7zm11.5-3h11.6v1H16.2zm0-3.1h11.6v1H16.2zm0-3h11.6v1H16.2z"/></svg>
+          <h3>LIST IT</h3>
         </div>
         <div class="box-right">
           <p>
@@ -25,10 +24,8 @@ name: Lend
       </div>
       <div class="box">
         <div class="box-left">
-          <h3>
-            Accept request:
-          </h3>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.001 101 109.764"><g stroke-miterlimit="10"><path d="M50.726 86.016c-3.664 0-6.643 2.979-6.643 6.642s2.979 6.642 6.643 6.642c3.663 0 6.642-2.979 6.642-6.642s-2.979-6.642-6.642-6.642zm0 9.963c-1.832 0-3.321-1.492-3.321-3.321s1.489-3.321 3.321-3.321c1.829 0 3.319 1.492 3.319 3.321s-1.49 3.321-3.319 3.321z"/><path d="M96.686 1.627A1.657 1.657 0 0 0 94.581.588a1.658 1.658 0 0 0-1.039 2.104c10.959 32.273-4.484 52.718-19.99 64.395-.08-.08-.178-.137-.262-.21-.215-.182-.426-.368-.662-.522-.201-.133-.422-.236-.637-.347-.156-.078-.302-.175-.464-.24-.276-.115-.569-.189-.862-.269-.123-.032-.235-.083-.363-.106a6.763 6.763 0 0 0-1.311-.134 6.65 6.65 0 0 0-6.642 6.644c0 .415.049.823.125 1.228.024.134.063.259.097.388.045.179.075.357.135.529a38.89 38.89 0 0 0-5.556 4.087c-1.905-1.32-4.094-2.081-6.424-2.081-2.35 0-4.556.773-6.473 2.118a47.485 47.485 0 0 0-5.586-3.928c.059-.15.087-.312.133-.469.062-.204.134-.403.174-.617.082-.412.128-.83.128-1.255a6.65 6.65 0 0 0-6.642-6.644 6.606 6.606 0 0 0-4.753 2.019C12.045 55.584-3.542 35.099 7.464 2.692A1.658 1.658 0 0 0 6.424.588a1.659 1.659 0 0 0-2.105 1.039C-7.977 37.831 12.153 59.89 26.068 70.193a6.545 6.545 0 0 0-.25 1.708 6.649 6.649 0 0 0 6.642 6.642c1.627 0 3.102-.61 4.258-1.586a45.654 45.654 0 0 1 5.049 3.475c-2.65 3.038-4.326 7.388-4.326 12.227 0 9.155 5.959 16.605 13.285 16.605 7.323 0 13.282-7.45 13.282-16.605 0-4.868-1.693-9.243-4.375-12.283a36.837 36.837 0 0 1 4.93-3.558c1.178 1.061 2.721 1.727 4.428 1.727a6.65 6.65 0 0 0 6.643-6.642c0-.694-.137-1.353-.336-1.979C89.06 59.611 108.904 37.605 96.686 1.627zM32.459 75.222a3.325 3.325 0 0 1-3.321-3.32c0-.547.146-1.056.382-1.512.003-.009.011-.013.015-.021a3.366 3.366 0 0 1 1.205-1.297l.055-.029c.212-.127.44-.221.676-.297.056-.018.111-.037.168-.052.266-.07.539-.115.819-.115 1.83 0 3.321 1.49 3.321 3.321 0 .33-.062.654-.162.971-.011.034-.02.066-.032.1-.112.317-.27.626-.48.906-.006.005-.006.014-.009.019a3.304 3.304 0 0 1-2.637 1.326zm18.267 30.719c-5.495 0-9.963-5.96-9.963-13.284 0-7.325 4.468-13.284 9.963-13.284 5.493 0 9.963 5.959 9.963 13.284-.001 7.324-4.47 13.284-9.963 13.284zm18.265-30.719a3.32 3.32 0 0 1-2.748-1.459 3.28 3.28 0 0 1-.379-.787 2.132 2.132 0 0 1-.062-.202 3.275 3.275 0 0 1-.131-.872 3.325 3.325 0 0 1 3.32-3.321c.268 0 .526.04.777.102.068.018.134.042.199.062a3.253 3.253 0 0 1 .706.31c.463.278.865.668 1.158 1.159.002.007.01.011.012.016.291.492.47 1.059.47 1.672a3.33 3.33 0 0 1-3.322 3.32z"/></g></svg>
+          <h3>ACCEPT IT</h3>
         </div>
         <div class="box-right">
           <p>
@@ -38,10 +35,8 @@ name: Lend
       </div>
       <div class="box">
         <div class="box-left">
-          <h3>
-            Pack it:
-          </h3>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="-50 -55.749 100 111.498"><path d="M47.993 6.548H31.345a2.007 2.007 0 0 1 0-4.013h14.643v-20.497c0-2.367-2.176-4.293-4.85-4.293H24.119a2.006 2.006 0 1 1 0-4.012h17.019c4.887 0 8.862 3.726 8.862 8.306V4.543a2.008 2.008 0 0 1-2.007 2.005m-78.354 0h-17.633A2.007 2.007 0 0 1-50 4.541v-22.503c0-4.581 3.976-8.306 8.864-8.306h17.26a2.006 2.006 0 1 1 0 4.012h-17.26c-2.674 0-4.851 1.926-4.851 4.293V2.534h15.626a2.006 2.006 0 0 1 0 4.014"/><path d="M33.603 55.749h-67.204c-4.195 0-7.609-3.208-7.609-7.148V8.44a2.007 2.007 0 0 1 4.013 0v40.158c0 1.729 1.613 3.138 3.596 3.138h67.204c1.979 0 3.592-1.407 3.592-3.138V8.44a2.007 2.007 0 0 1 4.013 0v40.158c-.001 3.943-3.412 7.151-7.605 7.151"/><path d="M.629 39.361c-.336 0-.674-.089-.989-.267a1.816 1.816 0 0 1-.666-.64c-3.83-3.207-17.503-18.086-20.369-23.576-3.578-6.854-1.849-16 3.854-20.386 2.065-1.59 4.46-2.432 6.925-2.432 4.439 0 8.476 2.653 10.795 7.1.229.438.418.705.556.861.135-.156.327-.422.557-.862 2.319-4.444 6.354-7.1 10.795-7.1 2.465 0 4.857.842 6.924 2.434 5.701 4.384 7.43 13.529 3.854 20.384C19.993 20.381 6.261 35.32 2.468 38.479c-.17.258-.4.47-.672.617a2.044 2.044 0 0 1-.947.252 2 2 0 0 1-.22.013M-10.616-3.925c-1.572 0-3.119.553-4.478 1.599-4.232 3.255-5.463 10.14-2.745 15.349C-15.371 17.752-3.083 31.132.734 34.702c3.813-3.565 16.104-16.95 18.571-21.679C22.024 7.814 20.792.929 16.563-2.326c-1.359-1.047-2.906-1.6-4.478-1.6-2.916 0-5.622 1.848-7.237 4.942C3.474 3.649 1.853 4.202.734 4.202c-1.12 0-2.743-.555-4.114-3.186-1.615-3.093-4.318-4.941-7.236-4.941m9.778-12.263c-.142 0-.283-.015-.422-.046-3.003-.646-29.511-6.486-35.749-12.035-3.344-2.975-5.225-6.983-5.293-11.285-.069-4.287 1.67-8.334 4.897-11.396 3.259-3.095 7.624-4.799 12.29-4.799 4.454 0 8.676 1.575 11.89 4.434C-7.105-45.87-.072-22.678 1.016-18.998a2.008 2.008 0 0 1-1.838 2.811l-.016-.001m-24.277-35.548c-3.633 0-7.017 1.313-9.528 3.697-2.402 2.281-3.698 5.271-3.647 8.422.051 3.166 1.454 6.131 3.948 8.351 4.064 3.615 21.174 8.162 30.577 10.356-2.708-8.585-8.124-23.845-12.127-27.407-2.479-2.205-5.754-3.419-9.223-3.419"/><path d="M.837-16.188a2.007 2.007 0 0 1-1.924-2.571c.805-2.744 8.038-26.974 14.311-32.556 3.215-2.859 7.438-4.434 11.892-4.434 4.666 0 9.03 1.705 12.29 4.799 3.227 3.062 4.966 7.109 4.898 11.396-.069 4.302-1.949 8.31-5.293 11.285-6.239 5.549-32.748 11.388-35.75 12.035a1.953 1.953 0 0 1-.424.046m24.278-35.548c-3.47 0-6.744 1.215-9.224 3.42C11.89-44.755 6.474-29.495 3.767-20.91c9.402-2.194 26.512-6.741 30.576-10.356 2.496-2.22 3.897-5.186 3.948-8.351.052-3.15-1.245-6.141-3.647-8.421-2.514-2.385-5.896-3.698-9.529-3.698"/><path d="M.121-1.185a2.005 2.005 0 0 1-2.006-2.006v-15.681a2.005 2.005 0 1 1 4.012 0V-3.19A2.004 2.004 0 0 1 .121-1.185"/></svg>
+          <h3>PACK IT</h3>
         </div>
         <div class="box-right">
           <p>
@@ -51,10 +46,8 @@ name: Lend
       </div>
       <div class="box">
         <div class="box-left">
-          <h3>
-            Send it:
-          </h3>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="-50 -37.35 100 74.699"><path d="M46.479 15.033h-5.263a13.653 13.653 0 0 0-10.71-5.222 13.653 13.653 0 0 0-10.717 5.222h-2.53v-35.291h20.438L46.49-.53l-.011 15.563zm0 10.311h-2.364c.072-.583.161-1.151.161-1.765a13.807 13.807 0 0 0-.97-5.017h3.172l.001 6.782zM30.507 33.84c-5.67 0-10.269-4.589-10.269-10.261 0-5.67 4.599-10.258 10.269-10.258 5.662 0 10.263 4.587 10.263 10.258 0 5.672-4.602 10.261-10.263 10.261m-45.217-8.496c.071-.583.178-1.151.178-1.765 0-1.721-.332-3.416-.974-5.017h33.194a13.88 13.88 0 0 0-.97 5.017c0 .613.093 1.182.172 1.765h-31.6zM-28.317 9.811a13.652 13.652 0 0 0-10.71 5.222h-7.45v-48.854H13.73v48.854h-31.323a13.682 13.682 0 0 0-10.724-5.222m0 24.03c-5.669-.012-10.255-4.612-10.249-10.269.01-5.673 4.61-10.261 10.275-10.25 5.671 0 10.261 4.607 10.251 10.269-.007 5.672-4.611 10.261-10.277 10.25m-18.16-8.497v-6.793h5.361a13.88 13.88 0 0 0-.974 5.029c0 .613.097 1.182.167 1.764h-4.554zm63.736-49.109V-37.35H-50v66.225h8.969c2.932 7.025 11.012 10.342 18.034 7.403a13.783 13.783 0 0 0 7.411-7.403H17.78c2.927 7.025 11.004 10.342 18.032 7.403a13.789 13.789 0 0 0 7.414-7.403H50V-.897L39.982-23.765H17.259z"/><path d="M18.646-6.058v3.526h14.575L34.762.723l2.324 4.989h8.016V2.193h-5.781l-.011-.042-3.855-8.208-16.809-.001z"/></svg>
+          <h3>SEND IT</h3>
         </div>
         <div class="box-right">
           <p>
@@ -170,7 +163,7 @@ name: Lend
         I have many items I want professional photographed. Do you offer this service?
       </h3>
       <p>
-        We can organize professional photoshoots for sophisticated Lenders with many items. Please contact us at <a href="mailto:support@thevolte.com">support@thevolte.com</a>
+        We can organize professional photoshoots for sophisticated Lenders with many items. Please contact us at <a href="mailto:{{ platform_context.support_email }}">{{ platform_context.support_email }}</a>
       </p>
       <h3>
         How does the Availability Calendar work? 
@@ -197,7 +190,7 @@ name: Lend
         Currently Lenders are unable to offer a try on service through The Volte platform. You can provide the Borrower with further information such as exact measurements.
       </p>
       <p>
-        If this is a service you would like to provide your customers please email us at <a href="mailto:support@thevolte.com">support@thevolte.com </a>and we’ll look into it for the future.
+        If this is a service you would like to provide your customers please email us at <a href="mailto:{{ platform_context.support_email }}">{{ platform_context.support_email }} </a>and we’ll look into it for the future.
       </p>
       <h3>
         How do I know when and where to courier the dress? 
@@ -239,7 +232,7 @@ name: Lend
         If you would like to request confirmation that your dress is on its way back to you, we encourage you to contact your Borrower through The Volte marketplace by sending them a message. 
       </p>
       <p>
-        If you have attempted to contact the Borrower on multiple occasions with no success, contact <a href="mailto:support@thevolte.com">support@thevolte.com</a>.
+        If you have attempted to contact the Borrower on multiple occasions with no success, contact <a href="mailto:{{ platform_context.support_email }}">{{ platform_context.support_email }}</a>.
       </p>
       <p>
         Remember the option to hold a security bond is there to protect you and your items in this sort of rare situation.
