NM 5848 - Add instagram icon. Migrate to fontawesome icons

--- a/lib/tasks/volte/liquid_views/home--index.liquid
+++ b/lib/tasks/volte/liquid_views/home--index.liquid
@@ -1,6 +1,7 @@
 ---
 partial: false
 ---
+
 <section class="home-hero">
     <div class="slideshow">
       <div class="slideshow-image slideshow-image-1"></div>
@@ -61,7 +62,10 @@ partial: false
           </div>
           <input type="hidden" name="sort" value="name_asc"/>
           <input type="hidden" name="lg_custom_attributes[item_type][]" value=""/>
-          <input class="search-input" name="query" placeholder="Search" type="text" /><button><i class="volte-icon-search"></i></button>
+          <input class="search-input" name="query" placeholder="Search" type="text" />
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 447.54001 447.62668"><path d="M270.413 261.831l-4.138 4.518-4.517 4.148c-24.753 22.637-56.907 35.112-90.552 35.112-35.882 0-69.608-13.974-94.977-39.343-25.328-25.328-39.27-59.064-39.27-94.986 0-35.923 13.942-69.65 39.27-94.977 25.37-25.368 59.095-39.342 94.977-39.342 35.872 0 69.608 13.974 94.977 39.342 25.368 25.369 39.342 59.106 39.342 94.977 0 33.644-12.475 65.8-35.112 90.551m169.687 142.4L308.963 273.094c21.726-29.332 33.521-64.874 33.521-101.813 0-45.75-17.811-88.766-50.162-121.117C259.972 17.814 216.954.001 171.206.001c-45.746 0-88.765 17.814-121.115 50.163C17.78 82.474 0 125.49 0 171.281c0 45.8 17.781 88.817 50.09 121.116 32.351 32.35 75.368 50.173 121.116 50.173 36.94 0 72.483-11.807 101.804-33.52l131.136 131.132a25.299 25.299 0 0 1 17.977 7.445c6.787 0 13.173-2.65 17.977-7.444 9.918-9.917 9.918-26.047 0-35.953"/></svg>
+          </button>
         </div>
       </form>
     </div>
