--- a/lib/tasks/volte/liquid_views/layouts--theme_footer.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_footer.liquid
@@ -48,19 +48,19 @@
                 Connect
             </li>
             {% if platform_context.instagram_url != blank %}
-                <li><a href="{{ platform_context.instagram_url }}" itemprop="sameAs"><i class="volte-icon-instagram"></i>Instagram</a></li>
+                <li><a href="{{ platform_context.instagram_url }}" itemprop="sameAs"><i class="fa fa-instagram"></i>Instagram</a></li>
             {% endif %}
             {% if platform_context.facebook_url != blank %}
-                <li><a href="{{ platform_context.facebook_url }}" itemprop="sameAs"><i class="volte-icon-facebook"></i>Facebook</a></li>
+                <li><a href="{{ platform_context.facebook_url }}" itemprop="sameAs"><i class="fa fa-facebook-official"></i>Facebook</a></li>
             {% endif %}
             {% if platform_context.twitter_url != blank %}
-                <li><a href="{{ platform_context.twitter_url }}" itemprop="sameAs"><i class="volte-icon-twitter"></i>Twitter</a></li>
+                <li><a href="{{ platform_context.twitter_url }}" itemprop="sameAs"><i class="fa fa-twitter"></i>Twitter</a></li>
             {% endif %}
             {% if platform_context.gplus_url != blank %}
-                <li><a href="{{ platform_context.gplus_url }}" itemprop="sameAs"><i class="volte-icon-googleplus"></i>Google+</a></li>
+                <li><a href="{{ platform_context.gplus_url }}" itemprop="sameAs"><i class="fa fa-google-plus"></i>Google+</a></li>
             {% endif %}
             {% if platform_context.blog_url != blank %}
-                <li><a href="{{ platform_context.blog_url }}"><i class="volte-icon-blog"></i>Blog</a></li>
+                <li><a href="{{ platform_context.blog_url }}"><i class="fa fa-rss"></i>Blog</a></li>
             {% endif %}
         </ul>
         <ul class="contact">
