NM-5993 file upload for mpo

--- a/app/views/dashboard/seller_attachments/_attachment.html.haml
+++ b/app/views/dashboard/seller_attachments/_attachment.html.haml
@@ -20,4 +20,4 @@
     .access-level
       = label_tag :access_level
       .access-level-select-container
-        = select_tag :access_level, options_for_select(SellerAttachment::ACCESS_LEVELS.map { |level| [t(level, scope: 'seller_attachments.access_levels'), level] }, attachment.access_level), data: {'seller-attachment-access-level' => true, 'seller-attachment-update-url' => dashboard_seller_attachment_path(attachment.id)}
+        = select_tag :access_level, options_for_select(Ckeditor::Asset::ACCESS_LEVELS.map { |level| [t(level, scope: 'seller_attachments.access_levels'), level] }, attachment.access_level), data: {'seller-attachment-access-level' => true, 'seller-attachment-update-url' => dashboard_seller_attachment_path(attachment.id)}
