--- a/app/views/instance_admin/theme/pages/_form.html.haml
+++ b/app/views/instance_admin/theme/pages/_form.html.haml
@@ -9,7 +9,7 @@
 
   .row
     .input-container.col-xs-12
-      = f.input :no_layout, as: :boolean
+      = f.input :layout_name, collection: Page::VALID_LAYOUTS, include_blank: true, prompt: 'Pick'
   .row
     .input-container.col-xs-12
       = f.input :content, hint: "Insert HTML, Markdown or Plain text here", input_html: { class: 'form-control', rows: "20" }
