NM-5993 file upload for mpo

--- a/app/views/instance_admin/theme/file_uploads/_asset.html.haml
+++ b/app/views/instance_admin/theme/file_uploads/_asset.html.haml
@@ -13,6 +13,8 @@
     .img-data
       .img-name
         = link_to asset.filename, asset.url, target: '_blank'
+      .img-name
+        Access Level: #{asset.access_level.presence || 'public'}
       .time-size
         .time
           = asset.format_created_at
