--- a/app/views/search/shared/_price_slider.html.haml
+++ b/app/views/search/shared/_price_slider.html.haml
@@ -1,8 +1,8 @@
 .search-mixed-filter{:'data-filter' => true}
   .container-fluid
-    .row-fluid.slider-padding
+    .row-fluid
       .span2
         %h4
           = t 'search.price_slider.title'
-      .span10.slider-padding-right.price-slider-container
+      .span10.price-slider-container
         #price-slider
